# OpenNeuro

./: .gitattributes  .gitignore  ACTION_AND_EXECUTION_PLAN.md  API_REFERENCE.md  BUILD_FIXES_SUMMARY.md  CHANGELOG.md  CICD_FIXES_SUMMARY.md  CI_CD_FIX.md  CODE_FRAMEWORK_INITIALIZATION.md  COMMUNITY.md  COMMUNITY_AND_FUNDRAISING.md  COMMUNITY_LAUNCH.md  COMPLETION_REPORT.md  COMPREHENSIVE_EXECUTION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_ENVIRONMENT_SETUP.md  EXECUTION_KICKOFF.md  EXECUTION_STAGE_MAP.md  EXECUTION_STARTUP_CHECKLIST.md  EXECUTION_STARTUP_LOG.md  FINAL_BUILD_FIXES.md  FUNDING_LAUNCH.md  GITHUB_POST_SETUP.md  GITHUB_UPLOAD_GUIDE.md  GIT_COMMIT_INSTRUCTIONS.md  LICENSE  M2_1_ACCEPTANCE_CRITERIA.md  M2_2_EXECUTION_FRAMEWORK.md  M2_3_EXECUTION_FRAMEWORK.md  M2_4_EXECUTION_FRAMEWORK.md  M2_5_EXECUTION_FRAMEWORK.md  M2_EXECUTION_PLAN.md  M2_PROGRESS_TRACKING.md  M2_TASKS_QUICK_REFERENCE.md  PERFORMANCE_REPORT.md  PLATFORM_BUILD_FIXES.md  PROJECT_MANAGEMENT.md  PTP_MESSAGE_PROCESSING_GUIDE.md  QUICK_REFERENCE.md  (+27 more)
.github/: CI_CD_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci-cd.yml  ci-ptp.yml  ci-tsn.yml  release.yml
bridge/: Cargo.toml  ros2_zenoh_bridge.py
bridge/src/: main.rs
demos/hello_world_servo/: README.md  demo.py
docs/: ARCHITECTURE.md  PERFORMANCE.md  PTP_ARCHITECTURE.md  PTP_DESIGN.md  PTP_MASTER_IMPLEMENTATION.md  QUICKSTART.md  TSN_ALGORITHM_DESIGN.md  TSN_DESIGN.md  TSN_REQUIREMENTS.md
docs/reports/: W2_PROGRESS_REPORT.md  W3_PROGRESS_REPORT.md
docs/reviews/: STAGE2_KICKOFF_REVIEW.md
examples/: agi_walker_ptp_integration.py
firmware/zenoh-pico-esp32/: README.md  platformio.ini
firmware/zenoh-pico-esp32/src/: config.h  main.c  sensor_driver.c  sensor_driver.h  servo_controller.c  servo_controller.h  wifi_config.h  zenoh_client.c  zenoh_client.h
firmware/zenoh-pico-stm32/: CMakeLists.txt  README.md
firmware/zenoh-pico-stm32/src/: config.h  eth_driver.c  eth_driver.h  main.c  realtime_scheduler.c  realtime_scheduler.h  sensor_interface.c  sensor_interface.h  stm32h7_init.c  stm32h7_init.h  zenoh_client.c  zenoh_client.h
hardware/: BOM_DETAILED.md  DESIGN_SPECIFICATION.md  REFERENCE_DESIGN.md  SCHEMATIC_DESIGN_GUIDE.md
ptp-stack/: CMakeLists.txt  README.md
ptp-stack/.github/workflows/: build.yml
ptp-stack/src/common/: ptp_common.h  types.h  utils.c  utils.h
ptp-stack/src/master/: announce.c  announce.h  bmc.c  bmc.h  clock.c  clock.h  master.c  master.h  messages.c  messages.h  optimization.c  optimization.h
ptp-stack/src/platform/: hw_timestamp.c  hw_timestamp.h  platform.c
ptp-stack/src/protocol/: delay.c  delay.h  sync.c  sync.h
ptp-stack/src/slave/: servo.c  servo.h  slave.c  slave.h
ptp-stack/tests/benchmark/: bench_ptp.c
ptp-stack/tests/integration/: test_master_slave.c
ptp-stack/tests/platform/: test_hw_timestamp.c
ptp-stack/tests/unit/: test_bmc.cpp  test_clock.cpp  test_messages.cpp
scripts/: git_init.sh  upload_to_github.bat  verify_all.bat  verify_all.sh
tests/: __init__.py
tests/latency_tests/: latency_measurement.py
tests/unit/: test_queue.py  test_scheduler.py
tsn-scheduler/: CMakeLists.txt  README.md  setup.py  test_bindings.py
tsn-scheduler/src/: __init__.py
tsn-scheduler/src/core/: bandwidth.c  bandwidth.h  flow.c  flow.h  queue.c  queue.h  scheduler.c  scheduler.h
tsn-scheduler/src/linux/: netlink_socket.c  netlink_socket.h  taprio_config.c  taprio_config.h  taprio_if.c  taprio_if.h
tsn-scheduler/src/python_api/: bindings.c
tsn-scheduler/src/tsn/: __init__.py
tsn-scheduler/src/tsn/core/: __init__.py  queue.py  scheduler.py
tsn-scheduler/src/tsn/linux/: __init__.py
tsn-scheduler/src/tsn/utils/: __init__.py
tsn-scheduler/tests/benchmark/: bench_scheduler.c
tsn-scheduler/tests/linux/: test_taprio.c
tsn-scheduler/tests/unit/: test_bandwidth.cpp  test_flow.cpp  test_queue.cpp  test_scheduler.cpp  test_taprio_config.cpp
zenoh-bridge/: CMakeLists.txt  ZENOH_INTEGRATION.md  ZENOH_REAL_INTEGRATION.md
zenoh-bridge/src/: ptp_publisher.c  tsn_qos_bridge.c  tsn_qos_bridge.h  zenoh_hal.h  zenoh_hal_full.c  zenoh_hal_pico.c
zenoh-bridge/tests/: test_hal.c  test_pubsub.c  test_qos_mapping.c
zone-controller/: README.md
zone-controller/hardware/: GERBER_MANIFEST.md  PCB_LAYOUT_STRATEGY.md  PTP_TIMESTAMP_DESIGN.md
zone-controller/hardware/kicad/: SCHEMATIC_NETLIST.md
